<resources>
    <string name="app_name">Investimentos</string>
    <string name="moedas">USD</string>
    <string name="porcentagem">0,53%</string>
    <string name="toolbar_moedas">Moedas</string>
    <string name="hifen">" - "</string>
    <string name="parabens">"Parabéns! \n Você acabou de "</string>
    <string name="virgula">",\n"</string>
    <string name="totalizando">"totalizando \n"</string>
    <string name="espaco">" "</string>
    <string name="comprar_maiusculo">"Comprar"</string>
    <string name="comprar_minusculo">"comprar"</string>
    <string name="vender_maiusculo">"Vender"</string>
    <string name="vender_minusculo">"vender"</string>
    <string name="venda_espaco"> "Venda: "</string>
    <string name="compra_espaco"> "Compra: "</string>
    <string name="em_caixa">" em caixa"</string>
    <string name="saldo_disponivel">"Saldo disponível: "</string>
    <string name="usd_dollar">USD - Dollar</string>
    <string name="_0_53">0,53%</string>
    <string name="compra_r_0_00">Compra: R$ 0,00</string>
    <string name="venda_r_0_00">Venda: R$ 0,00</string>
    <string name="saldo_dispon_vel_r_0">Saldo disponível: R$ 0</string>
    <string name="_1_dollar_em_caixa">1 Dollar em caixa</string>
    <string name="quantidade">Quantidade</string>
    <string name="vender">VENDER</string>
    <string name="comprar">COMPRAR</string>
    <string name="texto" />
    <string name="home">HOME</string>
    <string name="voltar_tela_moedas">Voltar tela moedas</string>
    <string name="c_mbio">Câmbio</string>
    <string name="voltar_tela_c_mbio">Voltar tela Câmbio</string>
</resources>