<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.activity.Cambio">

    <include
        android:id="@+id/include_toolbar_cambio"
        layout="@layout/toolbar_cambio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true"/>



    <LinearLayout
        android:id="@+id/card_cambio"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/fundo_personalizado"
        android:orientation="vertical"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include_toolbar_cambio"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_nome_moeda_cambio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/arial_black"
            android:text="@string/usd_dollar"
            android:textColor="#FFFFFFFF"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_porcentagem_moeda_cambio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/arial"
            android:text="@string/_0_53"
            android:textColor="#FF7ED321"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/tv_compra_moeda_cambio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/arial"
            android:text="@string/compra_r_0_00"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tv_venda_moeda_cambio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/arial"
            android:text="@string/venda_r_0_00"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp" />


    </LinearLayout>


    <TextView
        android:id="@+id/tv_saldo_disponivel_cambio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/arial"
        android:text="@string/saldo_dispon_vel_r_0"
        android:textColor="#FFFFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_cambio" />

    <TextView
        android:id="@+id/tv_valor_da_moeda_em_caixa_cambio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="@font/arial"
        android:text="@string/_1_dollar_em_caixa"
        android:textColor="#FFFFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_saldo_disponivel_cambio" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_quantidade_moedas_cambio"
        style="@android:style/Widget.EditText"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/fundo_edittext"
        android:fontFamily="@font/arial"
        android:hint="@string/quantidade"
        android:inputType="number"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_valor_da_moeda_em_caixa_cambio" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao_vender_cambio"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/fundo_botao_desabilitado"
        android:fontFamily="@font/arial"
        android:text="@string/vender"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao_comprar_cambio"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/fundo_botao_desabilitado"
        android:fontFamily="@font/arial"
        android:text="@string/comprar"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>